force-app/main/default/objects/RTL_AL_BlueBook__c/RTL_AL_BlueBook__c.object-meta.xml
<CustomObject>
    <description>For store blue book data from DWH.</description>
    <label>AL Blue Book</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>AL Blue Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AL Blue Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>