force-app/main/default/objects/RTL_AL_BlueBook__c/fields/RTL_AL_car_gear__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_car_gear__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Gear</label>
    <length>30</length>
    <type>Text</type>
</CustomField>