force-app/main/default/objects/RTL_AL_BlueBook__c/fields/RTL_AL_Start_date__c.field-meta.xml
<CustomField>
    <fullName>RTL_AL_Start_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>