force-app/main/default/objects/RTL_AL_BlueBook__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RTL_AL_bluebook_code__c</columns>
    <columns>RTL_AL_car_type__c</columns>
    <columns>RTL_AL_car_brand__c</columns>
    <columns>RTL_AL_car_group__c</columns>
    <columns>RTL_AL_car_gear__c</columns>
    <columns>RTL_AL_car_subtype__c</columns>
    <columns>RTL_AL_car_year__c</columns>
    <columns>RTL_AL_Update_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>